force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Bugs_TF_Found_Week_of_RF__c.field-meta.xml
<CustomField>
    <fullName>agf__Bugs_TF_Found_Week_of_RF__c</fullName>
    <description>P0/P1/P2 Bugs/TF Found the Week of Release Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
    <label>P0/P1/P2 Bugs/TF Found Week of RF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>