force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Code_Line_is_Releasable__c.field-meta.xml
<CustomField>
    <fullName>agf__Code_Line_is_Releasable__c</fullName>
    <description>Code Line is Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Additional Criteria below (Yes/No)</description>
    <inlineHelpText>Code Line is Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Additional Criteria below (Yes/No)</inlineHelpText>
    <label>Code Line is Releasable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>