force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Confirmed__c.field-meta.xml
<CustomField>
    <fullName>agf__Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmation of the Release Freeze Signoff</description>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>