force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Documentation_Complete__c.field-meta.xml
<CustomField>
    <fullName>agf__Documentation_Complete__c</fullName>
    <description>User documentation complete and checked in.</description>
    <inlineHelpText>User documentation complete and checked in.</inlineHelpText>
    <label>Documentation Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>