force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_Auto_Integrations__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Auto_Integrations__c</fullName>
    <label>Explain Auto Integrations</label>
    <type>TextArea</type>
</CustomField>