force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_Blocking_P0_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Blocking_P0_Bugs__c</fullName>
    <label>Explain P0/P1/Blocking Bugs</label>
    <type>TextArea</type>
</CustomField>