force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_Bugs_missing_Automation__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Bugs_missing_Automation__c</fullName>
    <description>Explain if Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation is &gt; 0</description>
    <inlineHelpText>Explain if Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation is &gt; 0</inlineHelpText>
    <label>Explain Bugs missing Automation</label>
    <type>TextArea</type>
</CustomField>