force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_Bugs_to_Fix__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Bugs_to_Fix__c</fullName>
    <label>Explain Bugs to Fix</label>
    <type>TextArea</type>
</CustomField>