force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_Code_Coverage_goals_not_met__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Code_Coverage_goals_not_met__c</fullName>
    <label>Explain Code Coverage Goals Not Met</label>
    <type>TextArea</type>
</CustomField>