force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_DB_Upgrade_Scripts_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_DB_Upgrade_Scripts_Incomplete__c</fullName>
    <description>Explain if DB Upgrade Scripts are Incomplete or Unverified</description>
    <inlineHelpText>Explain if DB Upgrade Scripts are Incomplete or Unverified</inlineHelpText>
    <label>Explain DB Upgrade Scripts Incomplete</label>
    <type>TextArea</type>
</CustomField>