force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_Extended_ftest_Test_Failures__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Extended_ftest_Test_Failures__c</fullName>
    <label>Explain Extended ftest Test Failures</label>
    <type>TextArea</type>
</CustomField>