force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_failure_to_pass_systes__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_failure_to_pass_systes__c</fullName>
    <label>Explain Failure to Pass Performance</label>
    <type>TextArea</type>
</CustomField>