force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_find_rate_if_high__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_find_rate_if_high__c</fullName>
    <label>Explain High Bug Find Rate</label>
    <type>TextArea</type>
</CustomField>