force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_High_Number_of_Bugs_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_High_Number_of_Bugs_to_Verify__c</fullName>
    <label>Explain Bugs to Verify</label>
    <type>TextArea</type>
</CustomField>