force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_High_TF_Fix_Rate__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_High_TF_Fix_Rate__c</fullName>
    <label>Explain High TF Fix Rate</label>
    <type>TextArea</type>
</CustomField>