force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_if_Code_Line_is_not_Releasable__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_Code_Line_is_not_Releasable__c</fullName>
    <description>Provide explanation if the Code Line is not Releasable</description>
    <inlineHelpText>Provide explanation if the Code Line is not Releasable</inlineHelpText>
    <label>Explain if Code Line is not Releasable</label>
    <type>TextArea</type>
</CustomField>