force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_if_TF_Exist__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_TF_Exist__c</fullName>
    <description>Explain if your team has TF on basic ftest, basic selenium or utest.</description>
    <inlineHelpText>Explain if your team has TF on basic ftest, basic selenium or utest.</inlineHelpText>
    <label>Explain TF on basicftest/selenium/utest</label>
    <type>TextArea</type>
</CustomField>