force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_Open_Regressions__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Open_Regressions__c</fullName>
    <label>Explain Open Regressions</label>
    <type>TextArea</type>
</CustomField>