force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_Open_User_Stories__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Open_User_Stories__c</fullName>
    <description>Explain any Open User Stories</description>
    <inlineHelpText>Explain any Open User Stories</inlineHelpText>
    <label>Explain Open User Stories</label>
    <type>TextArea</type>
</CustomField>