force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_pre_scripts_testing_not_complete__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_pre_scripts_testing_not_complete__c</fullName>
    <label>Explain Pre-Scripts Testing Incomplete</label>
    <type>TextArea</type>
</CustomField>