force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_release_sprint_goals_incomplete__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_release_sprint_goals_incomplete__c</fullName>
    <label>Explain Release Sprint Goals Incomplete</label>
    <type>TextArea</type>
</CustomField>