force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Explain_Test_Failures_older_than_1_day__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_Test_Failures_older_than_1_day__c</fullName>
    <label>Explain Test Failures Older Than 1 Day</label>
    <type>TextArea</type>
</CustomField>