force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__No_Blocking_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__No_Blocking_Bugs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs. All resolved bugs are Verified and Closed.</description>
    <inlineHelpText>No BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs. All resolved bugs are Verified and Closed.</inlineHelpText>
    <label>No Blocking Bugs</label>
    <type>Checkbox</type>
</CustomField>