force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Number_of_Extended_TF_to_Fix_3_days__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Extended_TF_to_Fix_3_days__c</fullName>
    <label>Number of Extended TF to Fix &gt;3 days (0)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>