force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Number_of_TF_to_Fix_1_day_old__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_TF_to_Fix_1_day_old__c</fullName>
    <label>Number of TF to Fix &gt;1 day old (0)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>