force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Other_Changes_for_Tech_Ops__c.field-meta.xml
<CustomField>
    <fullName>agf__Other_Changes_for_Tech_Ops__c</fullName>
    <description>Anything of interest that Tech Ops should be aware of?</description>
    <inlineHelpText>Anything of interest that Tech Ops should be aware of?</inlineHelpText>
    <label>Other Changes for Tech Ops</label>
    <type>TextArea</type>
</CustomField>