force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__P0_P1_P2_Bugs_Found_Week_of_RF__c.field-meta.xml
<CustomField>
    <fullName>agf__P0_P1_P2_Bugs_Found_Week_of_RF__c</fullName>
    <label>P0/P1/P2 Bugs Found Week of RF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>