force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__P1_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__P1_Bugs__c</fullName>
    <label>P1 Bugs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>