force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Passed_SysTest__c.field-meta.xml
<CustomField>
    <fullName>agf__Passed_SysTest__c</fullName>
    <description>Performance/scalability of new features and existing functionality acceptable for release.</description>
    <inlineHelpText>Performance/scalability of new features and existing functionality acceptable for release.</inlineHelpText>
    <label>Passed Performance Testing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>