force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Pending_Auto_Integrations_0__c.field-meta.xml
<CustomField>
    <fullName>agf__Pending_Auto_Integrations_0__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Number of Pending Auto-Integrations (0)</description>
    <inlineHelpText>Total Number of Pending Auto-Integrations (0)</inlineHelpText>
    <label>Number of Pending Auto-Integrations (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>