force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Post_Release_Freeze_Status_Updates__c.field-meta.xml
<CustomField>
    <fullName>agf__Post_Release_Freeze_Status_Updates__c</fullName>
    <label>Post Release Freeze Status Updates</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>