force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Pre_Scripts__c.field-meta.xml
<CustomField>
    <fullName>agf__Pre_Scripts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Scripts Testing Complete?</label>
    <type>Checkbox</type>
</CustomField>