force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Product_Division__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Division__c</fullName>
    <formula>CASE(agf__Team_Release__r.agf__Scrum_Team__r.agf__Division__c, &quot;Applications&quot;, &quot;Applications&quot;, &quot;Core&quot;, &quot;Core&quot;, &quot;Platform&quot;, &quot;Platform&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Division</label>
    <type>Text</type>
</CustomField>