force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Signoff_Date__c</fullName>
    <formula>IF( agf__Team_Signs_Off__c = true,   LastModifiedDate , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signoff Date</label>
    <type>Date</type>
</CustomField>