force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Team_Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Release</label>
    <referenceTo>agf__ADM_Team_Release__c</referenceTo>
    <relationshipName>R00NT0000000txqIMAQ</relationshipName>
    <type>Lookup</type>
</CustomField>