force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Team_Signoff_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>agf__Team_Signoff_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Signoff Confirmed</label>
    <type>Checkbox</type>
</CustomField>