force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Total_Bugs_Test_Failures_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>agf__Total_Bugs_Test_Failures_to_Verify__c</fullName>
    <description>Total Number of Fixed Bugs/TF to Verify</description>
    <label>Total Number of Fixed Bugs/TF to Verify</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>