force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Total_Number_of_Bugs_to_Fix__c.field-meta.xml
<CustomField>
    <fullName>agf__Total_Number_of_Bugs_to_Fix__c</fullName>
    <label>Number of Bugs to Fix (max 1/Dev) (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>