force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Freeze_Status__c/fields/agf__Total_Number_of_Fixed_Bugs_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>agf__Total_Number_of_Fixed_Bugs_to_Verify__c</fullName>
    <label>Number of Fixed Bugs to Verify (max1/QE)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>